# twin-te

./: .gitignore  .gitmodules  FULL_DOCKER_README.md  README.md  compose.override.yaml  compose.yaml  docker-compose.override.yml  docker-compose.yml  migrate-test.sh  renovate.json  twin-te.code-workspace
.github/workflows/: cd-production.yml  cd-staging.yml  ci-back.yml  ci-front.yml  ci-parser.yml  (+1 more)
back/: .air.toml  .env  .env.development  .envrc  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  main.go
codegen/: Dockerfile  Makefile
data-migration-v3-to-v4/: README.md  import.sh  main.py
db/: .env  Dockerfile  Makefile
docs/: FULL_DOCKER_README.md  README.md  setup-google-oauth.md
front/: .env.development  .env.production  .env.staging  .eslintrc.cjs  .gitignore  Caddyfile  Dockerfile  README.md  biome.json  buf.gen.yaml  bun.lockb  index.d.ts  jest.config.ts  nginx.conf  package.json  tsconfig.json  vite.config.ts
parser/: Dockerfile  README.md  download_and_parse.py  kdb_downloader.py  kdb_parser.py  kdb_parser_after_hook.py  pyproject.toml  requirements.txt  snapshot_test.py
parser/__tests__/: kdb_2021.xlsx  kdb_2026.xlsx
parser/script/: download_and_parse_in_all_years.sh  download_in_all_years.sh
proto/: buf.yaml
proxy/: Caddyfile.docker  Caddyfile.host  nginx.conf  nginx.docker.conf  nginx.host.conf
sponsorship/: .env.development  .env.production  .env.staging  .eslintrc.js  .prettierignore  Dockerfile  biome.json  buf.gen.yaml  bun.lockb  bunfig.toml  next-seo.config.ts  next.config.js  package.json  tsconfig.json
(+649 files in other folders)
