[project]
name = "parser"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "et-xmlfile==2.0.0",
    "idna==3.10",
    "numpy==2.3.1",
    "openpyxl==3.1.5",
    "pandas==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "sentry-sdk>=2.33.2",
    "six==1.17.0",
    "soupsieve==2.7",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
